@@ -35,6 +35,9 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-11-23 DP  1.6.1  Only enable the 'Include SQL' checkbox on the report
+                      dialog if there is SQL to include, Per Ezequias 
+                      Rodrigues da Rocha
 2006-11-21 DP  1.6.1  When checking the position & size of windows, use the
                       dimensions of the current display, not the primary.
 2006-11-17 DP  1.6.1  Include IN/OUT/INOUT keywords in procedure identifiers
